<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dyslexic_background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/seasonImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/autumn_image"
        android:contentDescription="@string/autumn_text" />

    <TextView
        android:id="@+id/seasonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/seasonImageView"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:text="@string/autumn_text"
        android:textColor="@color/dyslexic_text_color"
        android:textSize="24sp" />


    <LinearLayout
        android:id="@+id/guessLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/winterButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/winter"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:padding="12dp" />

        <Button
            android:id="@+id/springButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spring"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:padding="12dp" />

        <Button
            android:id="@+id/summerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/summer"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:padding="12dp" />

        <Button
            android:id="@+id/autumnButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/autumn"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:padding="12dp" />

    </LinearLayout>

</RelativeLayout>
