<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/badge" />

    <ImageButton
        android:id="@+id/enBtn"
        android:layout_width="118dp"
        android:layout_height="96dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/uk" />

    <ImageButton
        android:id="@+id/trBtn"
        android:layout_width="122dp"
        android:layout_height="98dp"
        android:layout_marginLeft="171dp"
        android:layout_toRightOf="@id/enBtn"
        android:src="@drawable/tr" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/logoImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/usernameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="@color/purple" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/signup"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="@color/purple" />

</RelativeLayout>
