<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" android:background="@drawable/menu_selector">


    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="384dp"
        android:layout_height="188dp"
        android:layout_marginBottom="16dp"
        android:textSize="36sp"
        android:textStyle="bold"
        android:fontFamily="@font/comfort"/>

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="389dp"
        android:layout_height="98dp"
        android:layout_below="@id/questionTextView"
        android:layout_marginTop="38dp"
        android:hint="@string/enter_your_answer"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:fontFamily="@font/comfort"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="395dp"
        android:layout_height="104dp"
        android:layout_below="@id/answerEditText"
        android:layout_marginTop="50dp"
        android:text="@string/submit"
        android:textSize="36sp"
        android:fontFamily="@font/comfort"
        android:background="@color/memoryback"/>
    <TextView
        android:id="@+id/answerView"
        android:layout_width="384dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@+id/submitButton"
        android:fontFamily="@font/comfort"
        android:text=""
        android:layout_marginTop="15dp"/>

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="64dp"
        android:layout_height="122dp"
        android:layout_below="@+id/answerView"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:contentDescription="@string/backtomenu"
        android:focusable="true"
        android:src="@drawable/back_icon" />

</RelativeLayout>
