<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/menu_selector">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/summerView"
                    android:layout_width="422dp"
                    android:layout_height="186dp"
                    android:layout_gravity="center"
                    android:elevation="7dp"
                    android:visibility="visible"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/summer" />

                <TextView
                    android:textSize="32sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summer_learn"
                    android:paddingTop="5dp"
                    android:fontFamily="@font/comfort"
                    android:textStyle="bold"/>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/winterView"
                    android:layout_width="422dp"
                    android:layout_height="186dp"
                    android:layout_gravity="center"
                    android:elevation="7dp"
                    android:visibility="visible"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/winter" />

                <TextView
                    android:textSize="32sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/winter_learn"
                    android:paddingTop="5dp"
                    android:fontFamily="@font/comfort"
                    android:textStyle="bold"/>


            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/springView"
                    android:layout_width="422dp"
                    android:layout_height="186dp"
                    android:layout_gravity="center"
                    android:elevation="7dp"
                    android:visibility="visible"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/spring" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfort"
                    android:paddingTop="5dp"
                    android:text="@string/spring_learn"
                    android:textSize="32sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/autumnView"
                    android:layout_width="422dp"
                    android:layout_height="186dp"
                    android:layout_gravity="center"
                    android:elevation="7dp"
                    android:visibility="visible"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/autumn"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfort"
                    android:paddingTop="5dp"
                    android:text="@string/autumn_learn"
                    android:textSize="32sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:id="@+id/backImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/backtomenu"
                    android:paddingBottom="10dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/back_icon" />
            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

</ScrollView>